동찬 클래스 cpp, h파일 생성

--- a/console/console/console.vcxproj
+++ b/console/console/console.vcxproj
@@ -115,7 +115,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="jangdongchan.cpp" />
     <ClCompile Include="MAIN.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="jangdongchan.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
