--- a/console/console/console.vcxproj.filters
+++ b/console/console/console.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="MAIN.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="jangdongchan.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="jangdongchan.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
