--- a/console/console/console.vcxproj
+++ b/console/console/console.vcxproj
@@ -116,6 +116,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="MAIN.cpp" />
+    <ClCompile Include="Test1111.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Test1111.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
