--- a/console/console/console.vcxproj.filters
+++ b/console/console/console.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="jangdongchan.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="JungUook.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="jangdongchan.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="JungUook.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
