--- a/console/console/console.vcxproj
+++ b/console/console/console.vcxproj
@@ -118,9 +118,11 @@
     <ClCompile Include="jangdongchan.cpp" />
     <ClCompile Include="JungUook.cpp" />
     <ClCompile Include="MAIN.cpp" />
+    <ClCompile Include="Minkyun.cpp" />
     <ClCompile Include="Test1111.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Minkyun.h" />
     <ClInclude Include="Test1111.h" />
   </ItemGroup>
   <ItemGroup>
