--- a/console/console/console.vcxproj.filters
+++ b/console/console/console.vcxproj.filters
@@ -24,12 +24,24 @@
     <ClCompile Include="JungUook.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Test1111.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Minkyun.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="jangdongchan.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="JungUook.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Test1111.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Minkyun.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
