--- a/console/console/console.vcxproj.filters
+++ b/console/console/console.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Minkyun.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="daehyuk.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="jangdongchan.h">
@@ -42,6 +45,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Minkyun.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="daehyuk.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
